styling changes - landing text and project pages

--- a/index.html
+++ b/index.html
@@ -48,20 +48,28 @@
                 </div>
 
                 <div class="animate-reveal animate-first">
-                    <div id="name">EMILY PORAT</div>
+<!--                    <div id="name">EMILY PORAT</div>-->
                     <div id="location"><i class="fa fa-map-marker"></i> Washington, DC</div>
                 </div>
 
                 <div id="home-text-description">
-                    <p class="animate-reveal animate-second">UX Designer at <a href="https://www.deloittedigital.com/">Deloitte Digital</a>, where we work with government agencies to modernize systems that matter.</p>
+                    <p class="animate-reveal animate-second">
+                        <div style="font-family:'Tokyo-Regular' ">Emily Porat</div> 
+                        <div>UX Designer</div>
+                
+                    <p class="animate-reveal animate-second" id="intro-2">
+                        Currently @ Deloitte Digital, where I work with government agencies to modernize systems that matter.
+                    </p>
                 </div>
             </div>
 
-            <img src="pics/arrow.png" id="arrow-down" onclick="slideDown()">
+            <div id="arrow-down" onclick="slideDown()"><i class="fa fa-long-arrow-down"></i></div>
+<!--            <div id="arrow-down" onclick="slideDown()"><i class="fa fa-long-arrow-alt-down" id="arrow=down" onclick="slideDown()"></i></div>-->
 
         </div>
 
-        <img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+<!--        <img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">-->
+        <div id="arrow-up" onclick="slideUp()"><i class="fa fa-long-arrow-up"></i></div>
 
         <div id="projects" class="animate-reveal animate-third margin-medium">
 
