--- a/justharvest.html
+++ b/justharvest.html
@@ -32,7 +32,7 @@
   <body right class="preload">
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
-	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+      <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 	
 	  	<div class="title-wrapper animate-reveal animate-first">
 	  	<div class="header">Community Table</div>
@@ -65,11 +65,10 @@
 					</div>
 			</div>
 	  	</div>
+      </div>
 
-	  	<div class="panel last"> <div class="divider"></div> </div>
-
-		<div class="panel">
-		  	<div class="subheader-3 left">Project Overview</div>
+		<div class="panel" style="background-color: #eeeeee">
+		  	<div class="subheader-3 left" >Project Overview</div>
 		  	<div class="body right">
 		  		<div>As a nonprofit organization, Just Harvest faces several challenges. Primarily, they are limited by their resources: their small staff and high volunteer turnover, along with the strict government guidelines they must work within. They need a service solution that leverages the community without creating more work for them.</div>
 		  		<p>A mutually beneficial solution we offered was to host recurring community potlucks. Eventually, resident leaders would run these events within their own neighborhoods and Just Harvest staff would attend and facilitate them. These community-embedded meals allow support networks to grow where they are needed most. They offer aid in the form of food <i>and</i> community. At the same time, Just Harvest gains insight into community needs through semi-directed conversation. These events also serve as a space for Just Harvest to advertise their other services and connect with new clients.
@@ -77,8 +76,6 @@
 		  		<p>This project was broken into a research phase, an ideation phase, and a prototyping phase.</p>
 		  	</div>
 		</div>
-
-		<div class="panel last"> <div class="divider"></div> </div>
 
 
 		<div class="panel">
@@ -100,9 +97,7 @@
 		  	</div>
 		</div>
 
-		<div class="panel last"> <div class="divider"></div> </div>
-
-		<div class="panel">
+		<div class="panel" style="background-color: #eeeeee">
 		  	<div class="subheader-3 left">Ideation</div>
 		  	<div class="body right">
 			  	
@@ -122,8 +117,6 @@
 			  	<img src="pics/justharvest/flow.png" class="pic-right">
 		  	</div>
 		</div>
-
-		<div class="panel last"> <div class="divider"></div> </div>
 
 		<div class="panel">
 		  	<div class="subheader-3 left">Prototyping & Delivery</div>
@@ -152,9 +145,9 @@
 				  	</div>
 				  	<img src="pics/justharvest/valueflow.jpg" class="pic-right">
 				</div>
+      </div>
 
-		<div class="panel last"> <div class="divider"></div> </div>
-
+      <div class="panel" style="background-color: #eeeeee">
 		  	<div class="subheader-3 left">Outcomes</div>
 		  	<div class="body right">
 		  		<div>Given our research, prototyping session, and positive feedback from our client, we believe that this idea has the potential to: </div>
@@ -170,19 +163,17 @@
 			  	<li><b>Empower community leaders.</b>Just Harvest provides support and training for community members to build positive environments and experiences that can strengthen ties and relationships.
 				</li>
 			</div>
-
-			<div class="panel last"> <div class="divider"></div> </div>
+      </div>
 
 		  	<a href="l&d.html" class="next-project" style="background-color: #f9f59c; color: black; float: right"> 
-		  		L&D PORTAL >
+		  		L&D PORTAL 
+                <i class="fa fa-chevron-right" style="padding-left: 10px"></i>
 		  	</a>
 
 		  	<a href="rsvpd.html" class="next-project" style="background-color: #f9f59c; color: black; float: left"> 
-		  		< RSVP'D
+		  		<i class="fa fa-chevron-left" style="padding-right: 10px"></i>
+                RSVP'D
 		  	</a>
-		  	</div>
-	  	</div>
-  	</div>
 
   	<div id="footer"></div>
   	</meta>
