--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
 <div id="my-nav" class="nav-colored">
-	<a class="nav-logo" href="index.html">EMILY PORAT</a> 
+	<a class="nav-logo" href="index.html">EP</a> 
 	<div id="nav-items">   
 		<a class="nav-item" id="home-nav-item" href="index.html" onclick="toggleNav()">PROJECTS</a>
 		<a class="nav-item" href="about.html" onclick="toggleNav()">ABOUT</a>
