delete unused font files, applying new proj styles

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   <body class="preload">
     <meta name="viewport" content="width=device-width">
       <div id="nav"></div>
-      <img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+      <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
       <div id="about">
           
