--- a/justharvest.html
+++ b/justharvest.html
@@ -34,16 +34,19 @@
     <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 	
-	  	<div class="title-wrapper animate-reveal animate-first">
-	  	<div class="header">Community Table</div>
-	  	<div class="last"> <div class="short-divider"></div></div>
-	  	<div class="subheader-2 center">Spring 2019 • Service Design </div>
+	  	<div class="title-wrapper">
+        <div class="title">
+            <div class="header">Community Table</div>
+            <div class="last"> <div class="short-divider"></div></div>
+            <div class="subheader-2 center">Spring 2019 • Service Design </div>
+            </div>
 	  	</div>
-	  	<img src="pics/justharvest/cover.jpg" class="big-pic animate-reveal animate-first">
+	  	<img src="pics/justharvest/cover.jpg" class="big-pic">
+      <div id="pic-space"></div>
 
-	  	<div id="justharvest" class="margin-medium">
+	  	<div id="justharvest">
 
-	  	<div class="content"> 
+	  	<div class="panel"> 
 			
 			<div class="context-summary">
 				<div class="subheader-2">Context</div> 
@@ -54,7 +57,7 @@
 					</p>
 			</div>
 			
-			<div class="context-specifics">
+			<div class="context-specifics" style="margin-left: 5%">
 				<div class="subheader-2">Team</div>
 					<div class="context-description">
 						I worked on a multi-disciplinary team of 5: the four other students were pursuing master degrees either in the HCI program and Integrated Innovation Institute
@@ -97,7 +100,7 @@
 		  	</div>
 		</div>
 
-		<div class="panel" style="background-color: #eeeeee">
+		<div class="panel gray">
 		  	<div class="subheader-3 left">Ideation</div>
 		  	<div class="body right">
 			  	
@@ -147,7 +150,7 @@
 				</div>
       </div>
 
-      <div class="panel" style="background-color: #eeeeee">
+      <div class="panel gray-gradient">
 		  	<div class="subheader-3 left">Outcomes</div>
 		  	<div class="body right">
 		  		<div>Given our research, prototyping session, and positive feedback from our client, we believe that this idea has the potential to: </div>
@@ -165,6 +168,7 @@
 			</div>
       </div>
 
+    <div style="background-color: white; position: relative; display: flow-root">
 		  	<a href="l&d.html" class="next-project" style="background-color: #f9f59c; color: black; float: right"> 
 		  		L&D PORTAL 
                 <i class="fa fa-chevron-right" style="padding-left: 10px"></i>
@@ -174,6 +178,7 @@
 		  		<i class="fa fa-chevron-left" style="padding-right: 10px"></i>
                 RSVP'D
 		  	</a>
+      </div>
 
   	<div id="footer"></div>
   	</meta>
