--- a/rsvpd.html
+++ b/rsvpd.html
@@ -32,14 +32,15 @@
     <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-	  	<div class="title-wrapper animate-reveal animate-second">
+	  	<div class="title-wrapper">
+            <div class="title">
 		  	<div class="header">RSVP'd</div>
 		  	<div class="last"> <div class="short-divider"></div></div>
-		  	<div class="subheader-2 center">Fall 2018 • Information Systems Capstone Project • <a href="https://sketch.cloud/s/GJGWD">Wires</a>
-	  	    </div>
+		  	<div class="subheader-2 center">Fall 2018 • Information Systems Capstone Project • <a href="https://sketch.cloud/s/GJGWD">Wires</a></div>
+            </div>
 	  	</div>      
       
-      <img src="pics/rsvpd/cover2.png" class="big-pic animate-reveal animate-first" style="background-color: #ff943a">
+      <img src="pics/rsvpd/cover2.png" class="big-pic" style="background-color: #ff943a">
       <div id="pic-space"></div>
 
 
@@ -166,11 +167,13 @@
 		  	</div>
 
 		  	<div class="panel">
-			  		<b class="subheader-4">Invitation Flow - Make them think (a little)</b>
-			  		<p>We cover the basics first: users see the event information and if it fits in to their schedule. Most users already use some form of technology (primarily calendar apps) to keep track of their events. RSVP'd makes this even easier by integrating that calendar directly in to the invitation flow.
+                    <b class="subheader-4" style="width:100vw">Invitation Flow - Make them think (a little)</b>
+			  		<div>
+                    <p>We cover the basics first: users see the event information and if it fits in to their schedule. Most users already use some form of technology (primarily calendar apps) to keep track of their events. RSVP'd makes this even easier by integrating that calendar directly in to the invitation flow.
 			  		</p>
 					<p>Next, users see a personalized checklist of their event preferences. Personal values dictate priorities - everyone has event preferences; by capturing these through the user profile and reminding the user of them, we hope it will make their decision easier.</p>
 					<p>Last, users select their commitment level, and pay a small refundable deposit. If they attend, they get the money back. If they don't attend, the money goes to a charity that the organizer has selected. We found through our research that a few dollars isn't a big enough barrier to prevent most people from RSVPing all together, but it is enough that someone will think twice about flaking last minute.</p>
+                        </div>
 		  	</div>
 
 		  	<div class="panel">
@@ -237,7 +240,7 @@
                 <i class="fa fa-chevron-right" style="padding-left: 10px"></i> 
 		  	</a>
 
-		  	<a href="salesforce.html" class="next-project" style="background-color: #ff943a; float: left; z-index: 5"> 
+		  	<a href="salesforce.html" class="next-project" style="background-color: #ff943a; float: left"> 
 		  		<i class="fa fa-chevron-left" style="padding-right: 10px"></i> 
                 SALESFORCE
 		  	</a>
