--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
                 </div>
             </div>
 
-            <div id="arrow-down" onclick="slideDown()"><i class="fa fa-long-arrow-down"></i></div>
+            <div id="arrow-down" onclick="slideDown()"><i class="fa fa-angle-double-down"></i></div>
 <!--            <div id="arrow-down" onclick="slideDown()"><i class="fa fa-long-arrow-alt-down" id="arrow=down" onclick="slideDown()"></i></div>-->
 
         </div>
 
-<!--        <img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">-->
-        <div id="arrow-up" onclick="slideUp()"><i class="fa fa-long-arrow-up"></i></div>
+        <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
         <div id="projects" class="animate-reveal animate-third margin-medium">
 
