--- a/l&d.html
+++ b/l&d.html
@@ -31,19 +31,21 @@
   <body class="preload">
     <meta name="viewport" content="width=device-width">
     <div id="nav"></div>
-	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 	
-	  	<div class="title-wrapper animate-reveal animate-first">
+	  	<div class="title-wrapper">
+            <div class="title">
 		  	<div class="header">Learning & Development Portal</div>
 		  	<div class="last"> <div class="short-divider"></div></div>
 		  	<div class="subheader-2 center">
 		  		Summer 2018 • Deloitte Digital Summer Internship 
 		  	</div>
+            </div>
 	  	</div>
-	  	<img src="pics/l&d/requests.jpg" class="big-pic animate-reveal animate-second">
-	  	<div id="ld" class="margin-medium">
+	  	<img src="pics/l&d/requests.jpg" class="big-pic">
 
-	  	<div class="content">
+
+	  	<div class="panel">
 			<div class="context-summary">
 			<div class="subheader-2">Context</div>
 				During my summer at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Design Intern, I redesigned the Learning and Development Portal: a website through which Deloitte Digital practitioners can request to attend external continuing education (CED) opportunities such as conferences and trainings.
@@ -70,14 +72,8 @@
 			</div>
 	  	</div>
 
-<!-- 	  	<div>
-			<img style="width: 40%; display: inline-block" src="pics/l&d/faq.jpg">
-			<img style="width: 40%; display: inline-block" src="pics/l&d/expenses.jpg">
-		</div> -->
 
-		<div class="panel last"> <div class="divider"></div> </div>
-
-	  	<div class="panel">
+	  	<div class="panel gray">
 	  	<div class="subheader-3 left">Process</div>
 	  	<div class="body right">
 	  		I followed the classic double-diamond process for this 6-week project, splitting each phase into roughly a two-week sprint. 
@@ -88,8 +84,6 @@
 	  	</div>
 	  	</div>
 
-	  	<div class="panel last"> <div class="divider"></div> </div>
-
 	  	<div class="panel">
 		<div class="subheader-3 left">Heuristic Evaluation</div>
 		 	<div class="body right">
@@ -99,9 +93,7 @@
 		  	</div>
 		</div>
 
-		<div class="panel last"> <div class="divider"></div> </div>
-
-		<div class="panel">
+		<div class="panel gray">
 		<div class="subheader-3 left">Interviews</div>
 		<div class="body right">
 			Before speaking to anyone, I determined who I needed to talk to in order to cover all potential user and stakeholder groups and created a <a href="pics/l&d/interview-script.pdf">script</a>. I divided the specific questions into general categories - Continuing Education, Approval Process, and Existing Portal. I knew it was important not to constrain myself by rigorously following a list of questions during interviews, so I used them as a starting off point and allowed the interviews to feel more like conversations. 
@@ -115,8 +107,6 @@
 		</div>
 		</div>
 
-		<div class="panel last"> <div class="divider"></div> </div>
-
 		<div class="panel">
 		<div class="subheader-3 left">Initial Usability Testing</div>
 		<div class="body right">
@@ -128,9 +118,7 @@
 		</div>
 		</div>
 
-		<div class="panel last"> <div class="divider"></div> </div>
-
-		<div class="panel">
+		<div class="panel gray">
 		<div class="subheader-3 left">Affinity Mapping</div>
 		<div class="body right">
 			In order to identify underlying needs and perspectives among the diverse group of interviewees, I led a team of UX designers and Product Managers in extracting salient points from the interviews into almost 400 individual user notes. Each individual note constitutes a single belief, experience, opinion, concern or need.
@@ -157,8 +145,6 @@
 			After annotations had been added, the final picture that emerges is an interplay of sorted data with reactions and analysis of that data.
 		</div> 
 		</div>
-
-		<div class="panel last"> <div class="divider"></div> </div>
 
 		<div class="panel">
 		<div class="subheader-3 left">Personas</div>
@@ -187,9 +173,7 @@
 		</div>
 		</div>
 
-		<div class="panel last"> <div class="divider"></div> </div>
-
-		<div class="panel">
+		<div class="panel gray">
 		<div class="subheader-3 left">Product Visioning Session</div>
 		<div class="body right">
 			
@@ -215,8 +199,6 @@
 		</div>
 		</div>
 
-		<div class="panel last"> <div class="divider"></div> </div>
-
 		<div class="panel">
 		<div class="subheader-3 left">User Stories</div>
 		<div class="body right">
@@ -228,9 +210,7 @@
 		</div>
 		</div>
 
-		<div class="panel last"> <div class="divider"></div> </div>
-
-		<div class="panel">
+		<div class="panel gray">
 		<div class="subheader-3 left">Business Process Modeling</div>
 		<div class="body right">
 			The current approval process is a one-size-fits all process that is in no way tailored to the request or user. So, an essential piece of this portal redesign was also redesigning the underlying process behind the portal. I started by breaking up the process into two user groups, by practitioner level: Analysts - Senior Consultants, and Managers and above. At the Manager level, it is likely that your counselor is an administrator, which creates redundancies. 
@@ -238,14 +218,10 @@
 		</div>
 		</div>
 
-		<div class="panel last"><div class="divider"></div></div>
-
 		<div class="panel dark">
 			<img src="pics/l&d/bpm1.jpg" class="pic-left" style="width: 80%; margin: 10%; margin-bottom: 0%">
 			<img src="pics/l&d/bpm2.jpg" class="pic-left" style="width: 80%; margin: 10%">
 		</div>
-
-		<div class="panel last"><div class="divider"></div></div>
 
 		<div class="panel">
 		<div class="subheader-3 left">Wireframes</div>
@@ -270,13 +246,11 @@
 		</div>
 		</div>
 
-		  	<div class="panel" style="text-align: center">
+		  	<div class="panel dark" style="text-align: center">
 		  		<div class="triple-pics"><img class="pic-right" src="pics/l&d/wire-landing.jpg"></div>
 		  		<div class="triple-pics"><img class="pic-right" src="pics/l&d/wire-faq.jpg"></div>
 		  		<div class="triple-pics"><img class="pic-right" src="pics/l&d/wire-expenses.jpg"></div>
 		  	</div>
-
-		<div class="panel last"><div class="divider"></div></div>
 
 		<div class="panel">
 		<div class="subheader-3 left">Visual Design</div>
@@ -290,17 +264,18 @@
 		</div>
 		</div>
 
-		<div class="panel last"><div class="divider"></div></div>
-
+        <div style="background-color: white; position: relative; display: flow-root">
 		  	<a href="chutzpow.html" class="next-project" style="background-color: #49ce5c; float: right"> 
-		  		CHUTZ-POW >
+		  		CHUTZ-POW
+                <i class="fa fa-chevron-right" style="padding-left: 10px"></i>
 		  	</a>
 
 		  	<a href="justharvest.html" class="next-project" style="background-color: #49ce5c; float: left"> 
-		  		< COMMUNITY TABLE
+		  		<i class="fa fa-chevron-left" style="padding-right: 10px"></i>
+                COMMUNITY TABLE
 		  	</a>
-	  	</div>
-  	</div>
+        </div>
+
   	<div id="footer"></div>
   	</meta>
   </body>
