updated fms pics + started content

--- a/about.html
+++ b/about.html
@@ -37,29 +37,29 @@
 
       <div id="about">
           
-          <div class="title-wrapper"><div class="header">About Emily</div></div>
-          <div class="margin-medium">
-          
-          <img src="pics/about/emily4.jpg" id="about-pic">
-          <div id="about-description" class="body">
-            Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, graduated from Carnegie Mellon University in 2019, and I'm currently living in Washington DC and working at Deloitte Digital. Yes, I miss the perfect weather and cheap tacos - but the East Coast isn't half bad.
-            <p>
-            My first exposure to anything remotely related to UI/UX was during my senior year in high school at <a href="http://www.freestyleacademy.rocks/">Freestyle Academy</a>, where I took Web Production and Graphic Design. I learned that I liked making pretty websites, and found a creative outlet that wasn't writing (my other passion in high school).
-            </p>
-           <p>
-            During my first two years at CMU, I wanted to be a software engineer. It seemed like all the cool kids were doing it, and I liked coding. But by the beginning of my junior year, with an engineering internship and several CS classes under my belt, I realized that I didn't want to stare at a computer screen for 40 hours a week for the rest of my life. Throughout my junior year, I found the work I did in my HCI classes much more engaging and fun, so I decided to shift my career towards UX.
-            </p>
-            <p>
-            My design (and life) philosophy is all about minimalism. Yes, I am a total fangirl of <a href="https://www.amazon.com/dp/B00KK0PICK/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">The Life-Changing Magic of Tidying Up</a>, but that doesn’t mean I only own one pair of shoes and live in a 200 square foot apartment. Rather, I firmly believe that “in anything at all, perfection is finally attained not when there is no longer anything to add, but when there is no longer anything to take away” (Antoine de Saint-Exupery).
-            </p>
-            <p>
-            I'm currently working on an enterprise web-based management system for a large federal agency through the Government and Public Service (GPS) divison of Deloitte Digital.
-            </p> 
-            <p>
-            In my free time, I like to lift weights, cook healthy(ish) food, and fantasize about owning a Corgi. 
-            </p>
+            <div class="panel">
+                <div class="header" style="width: 100%; margin: 0%;">About Emily</div>
+                <div class="short-divider"></div>
+<!--              <img src="pics/about/emily4.jpg" style="width: 40%">-->
+              <div class="body">
+                Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, graduated from Carnegie Mellon University in 2019, and I'm currently living in Washington DC and working at Deloitte Digital. Yes, I miss the perfect weather and cheap tacos - but the East Coast isn't half bad.
+                <p>
+                My first exposure to anything remotely related to UI/UX was during my senior year in high school at <a href="http://www.freestyleacademy.rocks/">Freestyle Academy</a>, where I took Web Production and Graphic Design. I learned that I liked making pretty websites, and found a creative outlet that wasn't writing (my other passion in high school).
+                </p>
+               <p>
+                During my first two years at CMU, I wanted to be a software engineer. It seemed like all the cool kids were doing it, and I liked coding. But by the beginning of my junior year, with an engineering internship and several CS classes under my belt, I realized that I didn't want to stare at a computer screen for 40 hours a week for the rest of my life. Throughout my junior year, I found the work I did in my HCI classes much more engaging and fun, so I decided to shift my career towards UX.
+                </p>
+                <p>
+                My design (and life) philosophy is all about minimalism. Yes, I am a total fangirl of <a href="https://www.amazon.com/dp/B00KK0PICK/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1">The Life-Changing Magic of Tidying Up</a>, but that doesn’t mean I only own one pair of shoes and live in a 200 square foot apartment. Rather, I firmly believe that “in anything at all, perfection is finally attained not when there is no longer anything to add, but when there is no longer anything to take away” (Antoine de Saint-Exupery).
+                </p>
+                <p>
+                I'm currently working on an enterprise web-based management system for a large federal agency through the Government and Public Service (GPS) divison of Deloitte Digital.
+                </p> 
+                <p>
+                In my free time, I like to lift weights, cook healthy(ish) food, and fantasize about owning a Corgi. 
+                </p>
+                </div>
             </div>
-        </div>
       </div>
       <div id="footer"></div>
       </meta>
