--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
 
             <!-- Featured project -->
             <a class="section" href="salesforce.html">
-              <img src="pics/sf-placeholder.png" class="project-pic" style="opacity:1; background-color: #9AC1F5;">
-              <div class="overlay" style="background-color: #9AC1F5">
+              <img src="pics/pos-small.png" class="project-pic" style="opacity:1; background-color: #AFD7F3;">
+              <div class="overlay" style="background-color: #AFD7F3">
                   <div class="project-caption">
-                    <div class="header" style="text-align: left; margin-left: 0%">Enterprise Salesforce Platform</div>
+                    <div class="proj-header">Gov POS System</div>
                     Web app that helps a federal aid program manage its business operations.
-                    <div class="subheader-2" style="color: #0e6b99">FALL 2019 • DELOITTE DIGITAL</div>
+                    <div class="subheader-2" style="color: #0e6b99">Fall 2019 - Spring 2020 • DELOITTE DIGITAL</div>
                   </div>
               </div>
 
               <div class="mobile-caption">
-                <div class="subheader">Enterprise Salesforce Platform</div>
-                <div class="subheader-2">FALL 2019 • DELOITTE DIGITAL</div>
+                <div class="subheader">Gov POS System</div>
+                <div class="subheader-2">Fall 2019 - Spring 2020 • DELOITTE DIGITAL</div>
                 <div>Web app that helps a federal aid program manage its business operations</div>
               </div>
             </a>
@@ -95,7 +95,7 @@
               <img src="pics/rsvpd.png" class="project-pic" style="opacity:1; background-color: #ff943a">
               <div class="overlay" style="background-color: #ff943a">
                   <div class="project-caption">
-                    <div class="header" style="text-align: left; margin-left: 0%">RSVP'd</div>
+                    <div class="proj-header">RSVP'd</div>
                     Mobile app that helps event planners predict attendance by providing predictability, motivation, and accountability.
                     <div class="subheader-2" style="color: #b85400">FALL 2018 • CARNEGIE MELLON</div>
                   </div>
@@ -113,7 +113,7 @@
               <img src="pics/jh.png" class="project-pic" style="opacity:1; background-color: #f9f59c">
               <div class="overlay" style="background-color: #f9f59c">
                   <div class="project-caption" style="color:black">
-                    <div class="header" style="text-align: left; margin-left: 0%">Community Table</div>
+                    <div class="proj-header">Community Table</div>
                     Service solution that mutually benefits the nonprofit Just Harvest and the food insecure individuals it serves.
                     <div class="subheader-2" style="color:#b4a113">SPRING 2019 • CARNEGIE MELLON</div>
                   </div>
@@ -132,7 +132,7 @@
               
               <div class="overlay" style="background-color: #49ce5c">
                   <div class="project-caption">
-                    <div class="header" style="text-align: left; margin-left: 0%">L&D Portal</div>
+                    <div class="proj-header">L&D Portal</div>
                     Website through which employees request continuing education programs.
                     <div class="subheader-2" style="color: #008f15">SUMMER 2019 • DELOITTE DIGITAL</div>
                   </div>
