--- a/l&d.html
+++ b/l&d.html
@@ -35,15 +35,14 @@
 	
 	  	<div class="title-wrapper">
             <div class="title">
-		  	<div class="header">Learning & Development Portal</div>
-		  	<div class="last"> <div class="short-divider"></div></div>
-		  	<div class="subheader-2 center">
-		  		Summer 2018 • Deloitte Digital Summer Internship 
-		  	</div>
+                <div class="header">L&D Portal</div>
+                <div class="last"> <div class="short-divider"></div></div>
+                <div class="subheader-2 center">Summer 2018 • Deloitte Digital Summer Internship</div>
             </div>
 	  	</div>
+      
 	  	<img src="pics/l&d/requests.jpg" class="big-pic">
-
+        <div id="pic-space"></div>
 
 	  	<div class="panel">
 			<div class="context-summary">
