archived old stuff, renamed new stuff

--- a/justharvest.html
+++ b/justharvest.html
@@ -37,7 +37,7 @@
 	  	<div class="title-wrapper">
         <div class="title">
             <div class="header">Community Table</div>
-            <div class="last"> <div class="short-divider"></div></div>
+            <div class="last"> <div class="divider"></div></div>
             <div class="subheader-2 center">Spring 2019 • Service Design </div>
             </div>
 	  	</div>
