--- a/l&d.html
+++ b/l&d.html
@@ -35,8 +35,8 @@
 	
 	  	<div class="title-wrapper">
             <div class="title">
-                <div class="header">L&D Portal</div>
-                <div class="last"> <div class="short-divider"></div></div>
+                <div class="header">Learning & Development Portal</div>
+                <div class="last"> <div class="divider"></div></div>
                 <div class="subheader-2 center">Summer 2018 • Deloitte Digital Summer Internship</div>
             </div>
 	  	</div>
@@ -264,8 +264,8 @@
 		</div>
 
         <div style="background-color: white; position: relative; display: flow-root">
-		  	<a href="chutzpow.html" class="next-project" style="background-color: #49ce5c; float: right"> 
-		  		CHUTZ-POW
+		  	<a href="fms-pos.html" class="next-project" style="background-color: #49ce5c; float: right"> 
+		  		GOV POS
                 <i class="fa fa-chevron-right" style="padding-left: 10px"></i>
 		  	</a>
 
