--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div id="projects" class="animate-reveal animate-third margin-medium">
 
             <!-- Featured project -->
-            <a class="section" href="salesforce.html">
+            <a class="section" href="fms-pos.html">
               <img src="pics/pos-small.png" class="project-pic" style="opacity:1; background-color: #AFD7F3;">
               <div class="overlay" style="background-color: #AFD7F3">
                   <div class="project-caption">
@@ -144,13 +144,6 @@
                 <div>Website through which employees request continuing education programs.</div>
               </div>
             </a>
-
-      </div>
-
-      <div id="button-wrapper">
-        <a href="archive.html" id="view-all-btn"> 
-          VIEW ALL PROJECTS <i class="fa fa-long-arrow-right"></i>
-        </a>
       </div>
 
       <div id="footer"></div>
