--- a/rsvpd.html
+++ b/rsvpd.html
@@ -239,9 +239,9 @@
                 <i class="fa fa-chevron-right" style="padding-left: 10px"></i> 
 		  	</a>
 
-		  	<a href="salesforce.html" class="next-project" style="background-color: #ff943a; float: left"> 
+		  	<a href="fms-pos.html" class="next-project" style="background-color: #ff943a; float: left"> 
 		  		<i class="fa fa-chevron-left" style="padding-right: 10px"></i> 
-                SALESFORCE
+                GOV POS
 		  	</a>
         </div>
 	  	
