archived old files

--- a/fms-pos.html
+++ b/fms-pos.html
@@ -106,7 +106,7 @@
 	<div class="panel">
 		<div class="subheader-3 left">Strategy</div>
 		<div class="body right">
-			
+			Coming soon - stay tuned!
 		</div>
 	</div>
 
