fixed mobile styles + proj image redesign

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
       <div id="about">
           
-            <div class="panel">
+            <div class="panel context">
                 <div class="header" style="width: 100%; margin: 0%;">About Emily</div>
                 <div class="short-divider"></div>
 <!--              <img src="pics/about/emily4.jpg" style="width: 40%">-->
