--- a/fms-pos.html
+++ b/fms-pos.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Emily Porat | Government POS</title>
+	<title>Emily Porat | Grocery POS System</title>
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
 	<link rel="stylesheet" type="text/css" href="styles/nav.css">
@@ -32,18 +32,17 @@
 	<div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>	
 
-	<div class="title-wrapper">
+	<div class="title-wrapper animate-reveal animate-first">
 		<div class="title">
-			<div class="header">Government Point of Sale System</div>
-			<div class="divider"></div>
-			<div class="subheader-2 center">Fall 2019 - Spring 2020 • Deloitte Digital</div>
+			<div class="header">Grocery POS</div>
+			<div class="last"><div class="divider"></div></div>
+			<div class="subheader-2">Fall 2019 - Spring 2020 • Deloitte Digital</div>
 		</div>
 	</div>
 
 	<img src="pics/fms/pos.png" class="big-pic" style="background-color: #E7F4FD">
-	<div id="pic-space"></div>
 
-	<div class="panel">
+	<div class="panel context">
 		<div class="context-summary">
 			<div class="subheader-2">Context</div>
 			<p>
