--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 </div>
 
                 <div id="home-text-description">
-                    <p class="animate-reveal animate-second">
-                        <div style="font-family:'Tokyo-Regular' ">Emily Porat</div> 
+                    <p class="animate-reveal animate-first">
+                        <div style="font-family:'Tokyo-Regular'">Emily Porat</div> 
                         <div>UX Designer</div>
                 
                     <p class="animate-reveal animate-second" id="intro-2">
@@ -76,17 +76,17 @@
             <a class="section" href="fms-pos.html">
               <img src="pics/pos-small.png" class="project-pic" style="opacity:1; background-color: #AFD7F3;">
               <div class="overlay" style="background-color: #AFD7F3">
-                  <div class="project-caption">
-                    <div class="proj-header">Gov POS System</div>
-                    Web app that helps a federal aid program manage its business operations.
+                  <div class="project-caption" style="color:black">
+                    <div class="proj-header">Grocery POS</div>
+                    Web & mobile app that helps a federal food distribution program manage its operations.
                     <div class="subheader-2" style="color: #0e6b99">Fall 2019 - Spring 2020 • DELOITTE DIGITAL</div>
                   </div>
               </div>
 
               <div class="mobile-caption">
-                <div class="subheader">Gov POS System</div>
-                <div class="subheader-2">Fall 2019 - Spring 2020 • DELOITTE DIGITAL</div>
-                <div>Web app that helps a federal aid program manage its business operations</div>
+                <div class="subheader">Grocery POS</div>
+                <div class="subheader-2">2019 - 2020 • DELOITTE DIGITAL</div>
+                <div>Web & mobile app that helps a federal food distribution program manage its operations.</div>
               </div>
             </a>
 
