--- a/justharvest.html
+++ b/justharvest.html
@@ -34,20 +34,18 @@
     <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 	
-	  	<div class="title-wrapper">
+	  	<div class="title-wrapper animate-reveal animate-first">
         <div class="title">
             <div class="header">Community Table</div>
-            <div class="last"> <div class="divider"></div></div>
-            <div class="subheader-2 center">Spring 2019 • Service Design </div>
+            <div class="last"><div class="divider"></div></div>
+            <div class="subheader-2">Spring 2019 • Service Design </div>
             </div>
 	  	</div>
-	  	<img src="pics/justharvest/cover.jpg" class="big-pic">
-      <div id="pic-space"></div>
+	  	<img src="pics/justharvest/cover.jpg" class="big-pic" style="background-color: #f9f59c">
 
 	  	<div id="justharvest">
 
-	  	<div class="panel"> 
-			
+	  	<div class="panel context"> 
 			<div class="context-summary">
 				<div class="subheader-2">Context</div> 
 					<p>
