--- a/l&d.html
+++ b/l&d.html
@@ -33,18 +33,17 @@
     <div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 	
-	  	<div class="title-wrapper">
+	  	<div class="title-wrapper animate-reveal animate-first">
             <div class="title">
-                <div class="header">Learning & Development Portal</div>
+                <div class="header">L&D Portal</div>
                 <div class="last"> <div class="divider"></div></div>
-                <div class="subheader-2 center">Summer 2018 • Deloitte Digital Summer Internship</div>
+                <div class="subheader-2">Summer 2018 • Deloitte Digital Internship</div>
             </div>
 	  	</div>
       
-	  	<img src="pics/l&d/requests.jpg" class="big-pic">
-        <div id="pic-space"></div>
+	  	<img src="pics/l&d/requests.jpg" class="big-pic" style="background-color: #49ce5c">
 
-	  	<div class="panel">
+	  	<div class="panel context">
 			<div class="context-summary">
 			<div class="subheader-2">Context</div>
 				During my summer at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Design Intern, I redesigned the Learning and Development Portal: a website through which Deloitte Digital practitioners can request to attend external continuing education (CED) opportunities such as conferences and trainings.
@@ -265,7 +264,7 @@
 
         <div style="background-color: white; position: relative; display: flow-root">
 		  	<a href="fms-pos.html" class="next-project" style="background-color: #49ce5c; float: right"> 
-		  		GOV POS
+		  		GROCERY POS
                 <i class="fa fa-chevron-right" style="padding-left: 10px"></i>
 		  	</a>
 
