--- a/rsvpd.html
+++ b/rsvpd.html
@@ -32,19 +32,18 @@
     <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-	  	<div class="title-wrapper">
+	  	<div class="title-wrapper animate-reveal animate-first">
             <div class="title">
-		  	<div class="header">RSVP'd</div>
+		  	<div class="header" style="color:white">RSVP'd</div>
 		  	<div class="last"> <div class="divider"></div></div>
-		  	<div class="subheader-2 center">Fall 2018 • Information Systems Capstone Project • <a href="https://sketch.cloud/s/GJGWD">Wires</a></div>
+		  	<div class="subheader-2">Fall 2018 • Senior Capstone • <a style="color:white" href="https://sketch.cloud/s/GJGWD">Wires</a></div>
             </div>
 	  	</div>      
       
       <img src="pics/rsvpd/cover2.png" class="big-pic" style="background-color: #ff943a">
-      <div id="pic-space"></div>
 
 
-	  	<div class="panel">
+	  	<div class="panel context">
 			<div class="context-summary">
 			<div class="subheader-2">Context</div>
 				<div>
@@ -241,7 +240,7 @@
 
 		  	<a href="fms-pos.html" class="next-project" style="background-color: #ff943a; float: left"> 
 		  		<i class="fa fa-chevron-left" style="padding-right: 10px"></i> 
-                GOV POS
+                GROCERY POS
 		  	</a>
         </div>
 	  	
