changed highlight color

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
           
             <div class="panel context">
                 <div class="header" style="width: 100%; margin: 0%;">About Emily</div>
-                <div class="short-divider"></div>
+                <div class="divider"></div>
 <!--              <img src="pics/about/emily4.jpg" style="width: 40%">-->
               <div class="body">
                 Hi there! If you want to know a little bit more about me, you’ve come to the right place. I'm originally from Mountain View, California, graduated from Carnegie Mellon University in 2019, and I'm currently living in Washington DC and working at Deloitte Digital. Yes, I miss the perfect weather and cheap tacos - but the East Coast isn't half bad.
