--- a/rsvpd.html
+++ b/rsvpd.html
@@ -36,7 +36,7 @@
             <div class="title">
 		  	<div class="header" style="color:white">RSVP'd</div>
 		  	<div class="last"> <div class="divider"></div></div>
-		  	<div class="subheader-2">Fall 2018 • Senior Capstone • <a style="color:white" href="https://sketch.cloud/s/GJGWD">Wires</a></div>
+		  	<div class="subheader-2">Fall 2018 • Senior Capstone • <a style="color:black" href="https://sketch.cloud/s/GJGWD">Wires</a></div>
             </div>
 	  	</div>      
       
