added another if to js title height

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       <div id="about">
           
             <div class="panel context">
-                <div class="header" style="width: 100%; margin: 0%;">About Emily</div>
+                <div class="header" style="width: 100%; margin: 0%; margin-bottom: 5%; margin-top: 5%">About Emily</div>
                 <div class="divider"></div>
 <!--              <img src="pics/about/emily4.jpg" style="width: 40%">-->
               <div class="body">
