updated about description

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                 I'm currently working on an enterprise web-based management system for a large federal agency through the Government and Public Service (GPS) divison of Deloitte Digital.
                 </p> 
                 <p>
-                In my free time, I like to lift weights, cook healthy(ish) food, and fantasize about owning a Corgi. 
+                In my free time, I like to lift weights, cook healthy(ish) food, and hang out with my cats. 
                 </p>
                 </div>
             </div>
