--- a/fms-pos.html
+++ b/fms-pos.html
@@ -64,14 +64,47 @@
 			<div class="context-description">I was one of two designers on a large team of 25+ practitioners.</div>
 			<div class="subheader-2">Skills</div> 
 			<div class="context-description">User Research, Journey Mapping, Wireframing, Prototyping, Visual Design, Information Architecture, User Flows</div>
-			<div class="subheader-2">Tools</div><div class="context-description">Sketch, Abstract, PowerPoint</div>
+			<div class="subheader-2">Tools</div><div class="context-description">Sketch, InVision, Abstract, PowerPoint</div>
 		</div>
 	</div>
 
 	<div class="panel gray">
-		<div class="subheader-3 left">Challenges</div>
-		
-		<div class="body right">  
+		<div class="subheader-3 left">Process</div>
+			<div class="body right">
+				I joined this project 4 months after it started. By that point, 1/3 of the web system has been designed and developed. In an ideal world, the team would have conducted thorough exploratory user research before beginning design and have been periodically conducting usability testing throughout. In this situation, however, the team had trouble getting client buy-in for direct user contact, so field visits were pushed back several times and demos were substituted for usability testing.
+				<p></p>
+				<b class="subheader-4">Discover</b>
+				<div class="subheader-2">Week 1-2</div>
+				<div style="margin-bottom: 5%">My design lead went on 3 field visits to conduct contextual inquiry and answer our highest-priority questions.</div>
+				
+				<b class="subheader-4">Define</b>
+				<div class="subheader-2">Week 3-4 & Throughout</div>
+				<div style="margin-bottom: 5%">I analyzed my design lead's field notes and built several deliverables, including a research report, executive summary, and journey map. Broader product requirements had already been defined through the Statement of Work, and more granular definition continued as we fleshed out the requirements for each system component.</div>
+				
+				<b class="subheader-4">Design, Develop, Demo, Repeat</b>
+				<div class="subheader-2">Every 3 weeks for 9 months</div>
+				<div style="margin-bottom: 5%">Our project was broken into 3-week sprints, which were segmented into 3-sprint 'Program Increments' (PIs). The design team worked to create wireframes one sprint in advance, so we could hand off to dev right away. Typically, each sprint looked something like this:
+					<li>Review user stories for requirements - ask clarifying questions</li>
+					<li>Build low-fi wires for internal design review</li>
+					<li>Review low-fi wires with dev & functional for feedback</li>
+					<li>Update & review low-fi wires with client for feedback</li>
+					<li>Mid-sprint demo for last sprint's designs</li>
+					<li>Build hi-fi visual comps for internal design review</li>
+					<li>Review hi-fi wires with dev, functional, and sometimes project leadership for feedback</li>
+					<li>Update & review hi-fi wires with client for feedback</li>
+					<li>Formal signoff & final tweaks</li>
+				</div>
+				Two things to keep in mind: this was a 1.0 product, so we often designed and built entire flows in just a few weeks. Plus, the team was brand-new and had never worked together before. So, our design sprints rarely went 100% according to plan - the above outline is the best-case scenario, but I was often juggling several other tasks as well as moving through that process.
+			</div>
+	</div>
+
+	<div class="panel">
+		<div class="subheader-3 left">Research Insights</div>
+
+		<div class="body right">
+		Because research occurred 4 months late, its purpose shifted from open-ended exploration to confirmation: validating the assumptions we'd already acted on and tweaking requirements that had already been defined. 
+		<p>We didn't have time to spend weeks processing interview data, synthesizing it with an affinity diagram, dand efining a product vision. We were already building primary features! Instead, I took 2 weeks to sift through all the notes, build out a wiki-style report with quotes and pictures, and condense that report into a PowerPoint presentation for the client. Below are some of the most important insights we confirmed and learned about the shopping experience.</p>
+		<img src="pics/fms/exec-summary.png" class="pic-right" style="background-color: #E7F4FD" alt="A PowerPoint presentation graphic showing Key Themes">
 		<div class="subheader-2">Flexibility</div>
 			Participating organizations use two different methods for checkout: manual and store concept. At manual locations, program staff step through each food category and enter the units selected manually. In the grocery store model, a customer shops in a warehouse, following an approved grocery list, and a staff member checks them out using a barcode scanner
 		</div>
@@ -93,19 +126,41 @@
 
 		<div class="body right" style="margin-top: 5%">
 		<div class="subheader-2">Tech literacy</div>
-			This is an enterprise application - our users will have different levels of computer proficiency. They are used to a function key based navigation legacy system; moving to point & click alone will be jarring.
+			This is an enterprise application - our users have different levels of computer proficiency. They are used to a function key based navigation legacy system; moving to point & click alone will be jarring.
 		</div>
 
 		<div class="body right" style="margin-top: 5%">
 		<div class="subheader-2">Connectivity</div>
 			Some organizations have unreliable internet access and some have none at all. A primary purpose of the mobile app is to support those groups with an offline mode. This capability brings a host of technical challenges surrounding data syncing and validity.
 		</div>
+
+		<div class="body right" style="margin-top: 5%">
+			To supplement the executive summary, I also built out journey maps for the key processes. Here's the map for the shopping experience:
+		</div>
+	</div>
+
+	<div class="panel dark">
+		<img class="pic-left" style="background-color: #272727; width: 80%; margin: 10%" src="pics/fms/journey-map.png">
 	</div>
 
 	<div class="panel">
-		<div class="subheader-3 left">Strategy</div>
+		<div class="subheader-3 left">Information Architecture</div>
 		<div class="body right">
-			Coming soon - stay tuned!
+			
+		</div>
+	</div>
+
+	<div class="panel">
+		<div class="subheader-3 left">Web Design</div>
+		<div class="body right">
+			
+		</div>
+	</div>
+
+	<div class="panel">
+		<div class="subheader-3 left">Mobile Design</div>
+		<div class="body right">
+			
 		</div>
 	</div>
 
