updated home page to card style

--- a/fms-pos.html
+++ b/fms-pos.html
@@ -53,12 +53,7 @@
 			<p>
 				Sophisticated applications can be built quickly by using the wide range of 'out of the box' Salesforce components. However, this particular system has many complex requirements, and custom-designed interfaces were required in three major areas: customer data management, inventory management, and the point of sale (POS) checkout system.
 			</p>
-			<p>
-				My focus was centered around the checkout process and interface.
-			</p>
-			<p>
-				<i>Please note: some data fields and details are omitted due to restrictions surrounding government contracting.</i>
-			</p>
+			<p><i>Please note: some data fields and details are omitted due to restrictions surrounding government contracting.</i></p>
 		</div>
 
 		<div class="context-specifics">
